--- a/languages/c/c/c.org
+++ b/languages/c/c/c.org
@@ -63,6 +63,42 @@
     #+begin_src c
       
     #+end_src
+* Standard Library
+- https://en.cppreference.com/w/c/header
+- https://en.wikibooks.org/wiki/C_Programming/stdbool.h
+|---------------+-----+---------------------------------------------------------------------------------------------------------|
+| assert.h      |     | Conditionally compiled macro that compares its argument to zero                                         |
+| complex.h     | C99 | Complex number arithmetic                                                                               |
+| ctype.h       |     | Functions to determine the type contained in character data                                             |
+| errno.h       |     | Macros reporting error conditions                                                                       |
+| fenv.h        | C99 | Floating-point environment                                                                              |
+| float.h       |     | Limits of floating-point types                                                                          |
+| inttypes.h    | C99 | Format conversion of integer types                                                                      |
+| iso646.h      | C95 | Alternative operator spellings                                                                          |
+| limits.h      |     | Ranges of integer types                                                                                 |
+| locale.h      |     | Localization utilities                                                                                  |
+| math.h        |     | Common mathematics functions                                                                            |
+| setjmp.h      |     | Nonlocal jumps                                                                                          |
+| signal.h      |     | Signal handling                                                                                         |
+| stdalign.h    | C11 | alignas and alignof convenience macros                                                                  |
+| stdarg.h      |     | Variable arguments                                                                                      |
+| stdatomic.h   | C11 | Atomic operations                                                                                       |
+| stdbit.h      | C23 | Macros to work with the byte and bit representations of types                                           |
+| stdbool.h     | C99 | Macros for boolean type                                                                                 |
+| stdckdint.h   | C23 | macros for performing checked integer arithmetic                                                        |
+| stddef.h      |     | Common macro definitions                                                                                |
+| stdint.h      | C99 | Fixed-width integer types                                                                               |
+| stdio.h       |     | Input/output                                                                                            |
+| stdlib.h      |     | General utilities: memory management, program utilities, string conversions, random numbers, algorithms |
+| stdnoreturn.h | C11 | noreturn convenience macro                                                                              |
+| string.h      |     | String handling                                                                                         |
+| tgmath.h      | C99 | Type-generic math (macros wrapping math.h and complex.h)                                                |
+| threads.h     | C11 | Thread library                                                                                          |
+| time.h        |     | Time/date utilities                                                                                     |
+| uchar.h       | C11 | UTF-16 and UTF-32 character utilities                                                                   |
+| wchar.h       | C95 | Extended multibyte and wide character utilities                                                         |
+| wctype.h      | C95 | Functions to determine the type contained in wide character data                                        |
+|---------------+-----+---------------------------------------------------------------------------------------------------------|
 * Libraries
 - Webserver https://mongoose.ws/
 - (3K) minimal cross-platform standalone C headers
