--- a/languages/ml/haskell/haskell.org
+++ b/languages/ml/haskell/haskell.org
@@ -1,102 +1,260 @@
+- https://github.com/Gabriella439/post-rfc/blob/main/sotu.md
 - https://lokathor.gitbooks.io/using-haskell/content/opengl/
-- Course for webservices https://github.com/qfpl/applied-fp-course
-- Course https://github.com/serokell/hse-haskell-course-src
-- Tutorial https://devtut.github.io/haskell/
-- https://serokell.io/blog/haskell-in-production-noredink
-- GHC Manual https://downloads.haskell.org/ghc/latest/docs/users_guide/index.html
-- Naming conventions https://kowainik.github.io/posts/naming-conventions
+- GHC(i) Manual
+  https://downloads.haskell.org/ghc/latest/docs/users_guide/index.html
+  https://downloads.haskell.org/ghc/latest/docs/users_guide/ghci.html
 - https://evanrelf.com/haskell-libraries-i-love
-- Styleguide https://github.com/tibbe/haskell-style-guide/blob/master/haskell-style.md
+- Styleguide
+  https://github.com/tibbe/haskell-style-guide/blob/master/haskell-style.md
+  https://kowainik.github.io/posts/naming-conventions
 - Mailing List https://mail.haskell.org/mailman/listinfo/haskell-cafe
-- Article: Monads https://blog.plover.com/prog/burritos.html
-- Article: https://paulspontifications.blogspot.com/2013/01/when-haskell-is-faster-than-c.html
 - https://www.schoolofhaskell.com/school/advanced-haskell/beautiful-concurrency/3-software-transactional-memory
 - https://github.com/prathyvsh/category-theory-resources
 - https://work.njae.me.uk/2021/12/21/advent-of-code-2021-day-19/
 - http://sordina.github.io/blog/2021/01/03/1609638326-advent19b.html
 - Usage Examples of Haskell https://homepages.inf.ed.ac.uk/wadler/realworld/
-- https://hackage.haskell.org/package/rio
-  https://www.fpcomplete.com/haskell/library/rio/
 - Memory Usage https://stackoverflow.com/questions/459725/how-to-reduce-memory-usage-in-a-haskell-app
 - FPGA Clash Talks https://unsafeperform.io/talks/
-- Book: Retrocomputing with Clash: Haskell for FPGA Hardware Design
-  https://unsafeperform.io/retroclash/
-- https://github.com/reanimate/reanimate
-- Haskell via Sokoban - Tutorial - https://haskell-via-sokoban.nomeata.de/
-- Learn Haskell making a static blog generator - https://soupi.github.io/learn-haskell-blog-generator/
 - https://crypto.stanford.edu/~blynn/haskell/
-- https://leanpub.com/haskell-cookbook/read
-- cabal v2-repl exe:CABALPKGNAME -- give a ghci shell with all deps loaded
-- https://hackage.haskell.org/package/base-4.14.0.0/docs/Prelude.html#g:5
 - http://www.cis.syr.edu/~sueo/cis252/emacs.html
 - https://hoogle.haskell.org/
-- euterpea example http://donyaquick.com/interesting-music-in-four-lines-of-code/
-- quickstart euterpea https://github.com/madjestic/nu/blob/02eb3957f9ba5d0f0fbac7cd260f7142227a7008/Projects/blogs/turtlesturtlesturtles/posts/2018-11-29-a-quick-start-with-Euterpea.md
-- Euterpea Interactive-Haskell with Literate-Haskell https://github.com/lfborjas/distractions/blob/a6b6bcd09270fa73233b05f3afb1800b977da9c3/haskell_school_of_music/README.md
 - https://github.com/graninas/software-design-in-haskell
-- https://kowainik.github.io/posts/haskell-mini-patterns
-- https://github.com/kowainik/learn4haskell
 - https://en.wikipedia.org/wiki/Dependent_type
 - https://en.wikipedia.org/wiki/Generalized_algebraic_data_type
 - https://github.com/omelkonian/AlgoRhythm (music)
-- Project https://github.com/xmonad/xmonad
-* Build
+- Project
+  https://github.com/reanimate/reanimate
+  https://github.com/xmonad/xmonad
+* cabal
+- cabal v2-repl exe:CABALPKGNAME -- give a ghci shell with all deps loaded
+| cabal                    | description                                                   |
+|--------------------------+---------------------------------------------------------------|
+| build                    | fetch deps, and builds targerts                               |
+| clean                    | cleans build artifacts                                        |
+| configure                |                                                               |
+| exec -- which EXE        | prints the path of the compiled EXE                           |
+| freeze                   | generate file with packages versions and build flags          |
+| gen-bounds               | generate version bounds for packages                          |
+| init --interactive       |                                                               |
+| init --libandexe         |                                                               |
+| repl --build-depends PKG |                                                               |
+| repl LIB                 | runs repl in our LIB context                                  |
+| run EXE -- ARGS          |                                                               |
+| sdist                    | bundle project in a tarball, which can be uploaded to hackage |
+| update                   | fetch packages metadata from remote repositories              |
+|--------------------------+---------------------------------------------------------------|
+* stack
+| stack             | description                                       |
+|-------------------+---------------------------------------------------|
+| build             | installs ghc, package deps and builds the project |
+| clean             | cleans build artifacts                            |
+| exec -- which EXE |                                                   |
+| exec EXE -- ARGS  | will run the EXE with ARGS                        |
+| ghci LIB          | starts repl in LIB context                        |
+* Language
+** Types
+|---------------+----------------------------+-------------------+----------------------------------------|
+| [1,2]         | [Int]                      | linked list       |                                        |
+| "foo"         | type A = String            | type alias        |                                        |
+|---------------+----------------------------+-------------------+----------------------------------------|
+| A "foo"       | newtype A = A String       | type "safe" alias | can have only 1 type                   |
+|               |                            |                   | no alternatives                        |
+|---------------+----------------------------+-------------------+----------------------------------------|
+| C "foo"       | data A a = C String Int    | data              | can have >1 type per construct         |
+|               | ¦ D a                      |                   | can have alternatives with ¦           |
+|---------------+----------------------------+-------------------+----------------------------------------|
+| C {foo = 1}   | data A = C { foo :: Int }  | data records      | automatically creates getters          |
+|               |                            |                   | avoid clashes by prefixing field names |
+|               |                            |                   | syntax to update a field               |
+|               |                            |                   | x1 {foo = 2}                           |
+|---------------+----------------------------+-------------------+----------------------------------------|
+| Tuple 2 "foo" | data Tuple a b = Tuple a b | data tuple        | we are able to plug differen types     |
+| (2, "foo")    |                            |                   | polymorphic definition                 |
+|---------------+----------------------------+-------------------+----------------------------------------|
+| Left "Hello"  | data Either a b            |                   | useful for modeling errors             |
+| Right 17      | = Left a                   |                   | Right = we got what we wanted          |
+|               | ¦ Right b                  |                   | Left = we got an error                 |
+|---------------+----------------------------+-------------------+----------------------------------------|
+#+TBLFM: $2=Left a
+** extensions
+- in repl: *:set -XTypeApplications*
+- in source: *{-# LANGUAGE TypeApplications, QuasiQuotes #-}*
+|----------------------------+-----------------------------------------------------------------------------------------------|
+| RecordWildCards            | RecName {..} automatically captures each field by the name                                    |
+| NamedFieldPuns             | Rec1Name { fieldname1 = Rec2Name { fieldname2 } }                                             |
+|----------------------------+-----------------------------------------------------------------------------------------------|
+| BlockArguments             | use just (do) in places where you would use ($ do)                                            |
+| GeneralizedNewtypeDeriving | to derive typeclass instance based on the underlying type                                     |
+| LambdaCase                 | (\case PAT1 -> RET1)                                                                          |
+| OverloadedStrings          |                                                                                               |
+| PatternSynonyms            |                                                                                               |
+| QuasiQuotes                | alternate form of string literal                                                              |
+| ScopedTypeVariables        | "allows type applications to refer to type variables rather that only the concrete type"      |
+| TemplateHaskell            |                                                                                               |
+| TypeApplications           | (@) to specify a type argument for polymorphic functions                                      |
+| TypeFamilies               |                                                                                               |
+| ViewPatterns               | (f -> PATTERN) applies "f" to value and then matches the result, on function pattern matching |
+|----------------------------+-----------------------------------------------------------------------------------------------|
+** ghc-options
 - -I0
   -Iw
   +RTS -I0 -RTS
   -rtsopts to ghc-options in .cabal
+- in .cabal *library\nghc-options: -fdefer-typed-holes*
+- in repl *:set -fdefer-typed-holes*
+- in source *{-# OPTIONS_GHC -fdefer-typed-hols #-}*
+|---------------------+--------------------------------------------------|
+| -Wall               | enables all warnings                             |
+| -fdefer-typed-holes | allows you to type (_) in place of an expression |
+| -fforce-recomp      |                                                  |
+|---------------------+--------------------------------------------------|
+** Standard Library
+- https://packages.ubuntu.com/bionic/amd64/ghc/filelist
+*** base
+- https://hackage.haskell.org/package/base
+- https://hackage.haskell.org/package/base-4.14.0.0/docs/Prelude.html#g:5
+|-------------------------+---|
+| Control.Applicative     |   |
+| Control.Arrow           |   |
+| Control.Category        |   |
+| Control.Concurrent      |   |
+| Control.Exception       |   |
+| Control.Monad           |   |
+| Data.Bifoldable         |   |
+| Data.Bifoldable1        |   |
+| Data.Bifunctor          |   |
+| Data.Bitraversable      |   |
+| Data.Bits               |   |
+| Data.Bool               |   |
+| Data.Char               |   |
+| Data.Coerce             |   |
+| Data.Complex            |   |
+| Data.Data               |   |
+| Data.Dynamic            |   |
+| Data.Either             |   |
+| Data.Eq                 |   |
+| Data.Fixed              |   |
+| Data.Foldable           |   |
+| Data.Foldable1          |   |
+| Data.Function           |   |
+| Data.Functor            |   |
+| Data.IORef              |   |
+| Data.Int                |   |
+| Data.Ix                 |   |
+| Data.Kind               |   |
+| Data.List               |   |
+| Data.Maybe              |   |
+| Data.Monoid             |   |
+| Data.Ord                |   |
+| Data.Proxy              |   |
+| Data.Ratio              |   |
+| Data.STRef              |   |
+| Data.Semigroup          |   |
+| Data.String             |   |
+| Data.Traversable        |   |
+| Data.Tuple              |   |
+| Data.Typeable           |   |
+| Data.Unique             |   |
+| Data.Version            |   |
+| Data.Void               |   |
+| Data.Word               |   |
+| Foreign.*               |   |
+| System.CPUTime          |   |
+| System.Console          |   |
+| System.Environment      |   |
+| System.Exit             |   |
+| System.IO               |   |
+| System.Info             |   |
+| System.Mem              |   |
+| System.Posix            |   |
+| System.Timeout          |   |
+| Text.ParserCombinators  |   |
+| Text.(Read/Printf/Show) |   |
+*** non base
+|------------------+-----------------------------------+------------------------------------------------------|
+| array            | Data.Array                        | https://hackage.haskell.org/package/array            |
+| containers       | Data.Graph                        | https://hackage.haskell.org/package/containers       |
+|                  | Data.IntMap                       | https://haskell-containers.readthedocs.io/en/latest/ |
+|                  | Data.IntSet                       |                                                      |
+|                  | Data.Map                          |                                                      |
+|                  | Data.Sequence                     |                                                      |
+|                  | Data.Set                          |                                                      |
+|                  | Data.Tree                         |                                                      |
+| binary           | Data.Binary                       | https://hackage.haskell.org/package/binary           |
+| bytestring       | Data.ByteString                   | https://hackage.haskell.org/package/bytestring       |
+| deepseq          | Control.DeepSeq                   | https://hackage.haskell.org/package/deepseq          |
+| directory        | System.Directory                  | https://hackage.haskell.org/package/directory        |
+| exceptions       | Control.Monad.Catch               |                                                      |
+| filepath         | System.(FilePath/OsPath/OsString) | https://hackage.haskell.org/package/filepath         |
+| haskeline        | System.Console                    | https://hackage.haskell.org/package/haskeline        |
+| *hoopl           | Compiler.Hoopl                    | https://hackage.haskell.org/package/hoopl            |
+| hpc              | Trace.Hpc                         | https://hackage.haskell.org/package/hpc              |
+| integer-gmp      | GHC.Integer.GMP                   |                                                      |
+| libiserv         |                                   |                                                      |
+| mtl              | Control.Monad.Accum               |                                                      |
+|                  | Control.Monad.Cont                |                                                      |
+|                  | Control.Monad.Except              |                                                      |
+|                  | Control.Monad.Identity            |                                                      |
+|                  | Control.Monad.RWS                 |                                                      |
+|                  | Control.Monad.Reader              |                                                      |
+|                  | Control.Monad.Select              |                                                      |
+|                  | Control.Monad.State               |                                                      |
+|                  | Control.Monad.Trans               |                                                      |
+|                  | Control.Monad.Writer              |                                                      |
+| parsec           | Text.Parsec                       |                                                      |
+|                  | Text.ParserCombinators.Parsec     |                                                      |
+| pretty           | Text.PrettyPrint                  | https://hackage.haskell.org/package/pretty           |
+| process          | System.Cmd                        | https://hackage.haskell.org/package/process          |
+|                  | System.Process                    |                                                      |
+| terminfo         | System.Console.Terminfo           | https://hackage.haskell.org/package/terminfo         |
+| template-haskell | Language.Haskell.TH               | https://hackage.haskell.org/package/template-haskell |
+| text             | Data.Text                         |                                                      |
+| time             | Data.Time                         | https://hackage.haskell.org/package/time             |
+| transformers     | Control.Monad.Trans               | https://hackage.haskell.org/package/transformers     |
+| stm              | Control.Concurrent.STM            |                                                      |
+|                  | Control.Monad.STM                 |                                                      |
+| unix             | System.Posix                      | https://hackage.haskell.org/package/unix             |
+| xhtml            | Text.XHtml                        | https://hackage.haskell.org/package/xhtml            |
+|------------------+-----------------------------------+------------------------------------------------------|
 * Personalities
 ** Simon Peyton-Jones
 - haskell comitee on design
 ** Philip Wadler
 - haskell comitee on design
-* Setup
+* Emacs Setup
   - https://github.com/haskell/haskell-ide-engine
   - https://github.com/soupi/minimal-haskell-emacs (setup)
   - https://github.com/ndmitchell/ghcid "flymake"
   - https://github.com/ndmitchell/hlint "flycheck"
   - https://github.com/chrisdone/hindent "gofmt"
-* Standard Library
-- Base https://hackage.haskell.org/package/base
 * Libraries
+|----------------------+----+-----+------------------------------------+----------------------------------------------------|
+| parsec               | 23 | 0.7 | Parser lib                         | https://github.com/haskell/parsec                  |
+| network              | 23 | 0.2 | low level network lib              | https://github.com/haskell/network                 |
+| containers           | 23 | 0.3 | data types                         | https://github.com/haskell/containers              |
+|----------------------+----+-----+------------------------------------+----------------------------------------------------|
+| validation           | 21 | 0.1 | Like Either but acc Applicative    | https://github.com/system-f/validation             |
+| relude               | 23 | 0.6 | Prelude alternative                | https://github.com/kowainik/relude                 |
+| rio                  | 23 | 0.8 | Prelude alternative                | https://github.com/commercialhaskell/rio           |
+| optparse-applicative | 22 | 0.8 | parses CLI options                 | https://github.com/pcapriotti/optparse-applicative |
+| conduit              | 22 | 0.8 | Streaming data lib                 | https://github.com/snoyberg/conduit                |
+| resourcet            |  * |   * | alloc and free of scarce resources | *                                                  |
+| lens                 | 23 | 1.9 | Lenses, Folds and Traversals       | https://github.com/ekmett/lens/                    |
+| yesod                | 23 | 2.5 | Webframework                       | https://github.com/yesodweb/yesod                  |
+|----------------------+----+-----+------------------------------------+----------------------------------------------------|
+- rio https://www.fpcomplete.com/haskell/library/rio/
+- terminfo https://github.com/tanakh/cless/blob/master/src/Main.hs
+- euterpea
+  - example http://donyaquick.com/interesting-music-in-four-lines-of-code/
+  - quickstart https://github.com/madjestic/nu/blob/02eb3957f9ba5d0f0fbac7cd260f7142227a7008/Projects/blogs/turtlesturtlesturtles/posts/2018-11-29-a-quick-start-with-Euterpea.md
+  - Interactive-Haskell with Literate-Haskell https://github.com/lfborjas/distractions/blob/a6b6bcd09270fa73233b05f3afb1800b977da9c3/haskell_school_of_music/README.md
 - A fast, light-weight web server for WAI applications.
   https://hackage.haskell.org/package/warp
   https://hackage.haskell.org/package/wai
 - REST - A family of combinators for defining webservices APIs and serving them
   https://hackage.haskell.org/package/servant
 - https://hackage.haskell.org/package/turtle-1.5.21/docs/Turtle-Tutorial.html
-- Conduit is a framework for dealing with streaming data, such as reading raw bytes from a file, parsing a CSV response body from an HTTP request, or performing an action on all files in a directory tree. 
-  https://github.com/snoyberg/conduit
-- It is defined as a monad transformer that can be stacked on arbitrary monads, and it is also parametric in the input stream type.
-  https://hackage.haskell.org/package/parsec
+- conduit: is a framework for dealing with streaming data, such as reading raw bytes from a file, parsing a CSV response body from an HTTP request, or performing an action on all files in a directory tree. 
+- parsec: It is defined as a monad transformer that can be stacked on arbitrary monads, and it is also parametric in the input stream type.
 - State of the Haskell ecosystem
   https://github.com/Gabriel439/post-rfc/blob/master/sotu.md
-* Learn
-** Other
-- https://github.com/bitemyapp/fp-course
-- https://github.com/hmemcpy/milewski-ctfp-pdf
-- https://threadreaderapp.com/thread/1277615394560360449.html
-- https://github.com/Kuratoro/haskell.zettel.page/blob/master/2012502.md
-- Applied Haskell is a commercial training program focusing on teaching intermediate Haskell.
-  https://www.fpcomplete.com/haskell/syllabus/
-- http://learnyouahaskell.com/chapters
-- https://www.reddit.com/r/haskell/comments/d5og5n/which_book/
-- https://github.com/i-am-tom/haskell-exercises (extensions)
-- https://github.com/caiorss/Functional-Programming
-- What I Wish I Knew When Learning Haskell
-  http://dev.stephendiehl.com/hask/
-- https://kowainik.github.io/posts/haskell-mini-patterns
-- https://github.com/soupi/haskell-study-plan
-- https://github.com/alpacaaa/zero-bullshit-haskell
-- https://github.com/tssm/up-to-date-real-world-haskell
-- https://github.com/graninas/software-design-in-haskell
-- https://github.com/bitemyapp/learnhaskell
-** Monad Tutorials
-- https://www.lambdacat.com/the-midnight-monad-a-journey-to-enlightenment/
-- https://adit.io/posts/2013-04-17-functors,_applicatives,_and_monads_in_pictures.html
-- https://en.wikibooks.org/wiki/Haskell/Understanding_monads
-- http://blog.sigfpe.com/2006/08/you-could-have-invented-monads-and.html
-- https://web.archive.org/web/20081206204420/http://www.loria.fr/~kow/monads/index.html
-- https://blog.plover.com/prog/burritos.html
-  https://byorgey.wordpress.com/2009/01/12/abstraction-intuition-and-the-monad-tutorial-fallacy/
-  https://chrisdone.com/posts/monads-are-burritos/
